# vid_dub

./: .dockerignore  .env.example  .gitignore  Dockerfile.online  ENGINEERING_MAP.md  INSTALL.md  README.md  config.example.py  docker-compose.yml  main.py  mainSubs  pyproject.toml  requirements-api.txt  requirements-ci.txt  requirements-online.txt  requirements.txt  segments_my_audio.json  segments_translated_my_audio.json  test.py  translation_profiles.yaml  update_diploma_docx.py
.github/workflows/: unit.yml
api/: __init__.py  app.py  jobs.py  schemas.py
desktop/: __init__.py  app.py
experiments/: _experiment_paths.py  compare_translation_models.py  compare_translation_strategies.py  compare_translator_outputs.py  test_google_translate.py
media/: README.md
scripts/: benchmark_tts_profiles.py  diarization_dubbing_probe.py  diarization_probe.py  product_smoke.py  smoke_pipeline.py
src/: asr.py  asr_backend.py  audio_analysis.py  config_snapshot.py  diarization.py  doctor.py  finetune.py  metrics.py  postprocessing.py  preprocessing.py  reporting.py  subtitles.py  translation.py  translation_backends.py  translation_common.py  translation_length.py  translation_normalize.py  translation_profiles.py  translation_qa.py  translation_segments.py  tts.py  tts_audio.py  tts_backends.py  tts_config.py  tts_guards.py  tts_resources.py  tts_routing.py  tts_text.py  tts_timing.py
tests/: compare_translator_outputs.py  plot_translation_metrics.py  test_google_translate.py  test_translation.py  test_translation_models.py
tests/unit/: test_api_jobs.py  test_asr_metadata.py  test_config_snapshot.py  test_diarization.py  test_diarization_dubbing_probe.py  test_doctor.py  test_elevenlabs_tts_backend.py  test_main_step_selection.py  test_pipeline_io.py  test_pipeline_resume.py  test_postprocessing.py  test_tts_text.py  (+16 more)
tools/: build_article_docx.py  export_article_markdown_to_docx.ps1  export_article_to_docx.ps1
utils/: helpers.py  pipeline_io.py  pipeline_resume.py
web/: app.js  index.html  styles.css
(+1 files in other folders)
